--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
     <script type="text/javascript" src="/static/js/app.js"></script>
     <link rel="icon" href="/static/img/bclogo.png" />
     <title>BC Munchies</title>
@@ -16,7 +18,11 @@
     <div class="header">
         <img class="clearpng" src="/static/img/clearpng.png">
         <img class="munchieslogo" src="/static/img/munchies2.png" alt="logo" />
-        <img class="bclogo" src="/static/img/BClogo.png" alt="bclogo" />
+        <div class="ordericon" onclick="window.location.href='/order'">
+            <span class="ordericonnum"> 2 </span>
+            <img class="bclogo" src="/static/img/BClogo.png" alt="bclogo" />
+        </div>
+        
     </div>
     
     <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
@@ -27,11 +33,167 @@
     </label>
 
     <div id="sidebarMenu">
-        <ul class="sidebarMenuInner">
-            <li>Jelena Jovanovic <span>Web Developer</span></li>
-        
-        </ul>
+        <div class="sidebarMenuInner">
+            <nav class="main-nav">
+                <ul class="loginbuttons">
+                    <a href="#0" id="signinclick" class="bttn">Login</a>
+                    <a href="#0" id="signupclick" class="bttn-dark">Sign Up</a>
+                </ul>
+            </nav>
+    
+            <a href="#0" class="bttn-two">Orders</a>
+            <a href="#0" class="bttn-two">Referrals</a>
+        </div>
     </div>
-  
+
+    <div class="user-modal">
+        <div class="user-modal-container">
+            <ul class="switcher">
+                <li><a href="#0">Sign in</a></li>
+                <li><a href="#0">New account</a></li>
+            </ul>
+
+            <div id="login">
+                <form class="form">
+                    <p class="fieldset">
+                        <label class="image-replace email" for="signin-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
+                        <span class="error-message">An account with this email address does not exist!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace password" for="signin-password">Password</label>
+                        <input class="full-width has-padding has-border" id="signin-password" type="password"  placeholder="Password">
+                        <a href="#0" class="hide-password">Show</a>
+                        <span class="error-message">Wrong password! Try again.</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <input type="checkbox" id="remember-me" checked>
+                        <label for="remember-me">Remember me</label>
+                    </p>
+
+                    <p class="fieldset">
+                        <input class="full-width" type="submit" value="Login">
+                    </p>
+                </form>
+                
+                <p class="form-bottom-message"><a href="#0">Forgot your password?</a></p>
+                <!-- <a href="#0" class="close-form">Close</a> -->
+            </div>
+
+            <div id="signup">
+                <form class="form">
+                    <p class="fieldset">
+                        <label class="image-replace username" for="signup-username">Username</label>
+                        <input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
+                        <span class="error-message">Your username can only contain numeric and alphabetic symbols!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace email" for="signup-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
+                        <span class="error-message">Enter a valid email address!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace password" for="signup-password">Password</label>
+                        <input class="full-width has-padding has-border" id="signup-password" type="password"  placeholder="Password">
+                        <a href="#0" class="hide-password">Show</a>
+                        <span class="error-message">Your password has to be at least 6 characters long!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <input type="checkbox" id="accept-terms">
+                        <label for="accept-terms">I agree to the <a class="accept-terms" href="#0">Terms</a></label>
+                    </p>
+
+                    <p class="fieldset">
+                        <input class="full-width has-padding" type="submit" value="Create account">
+                    </p>
+                </form>
+
+                <!-- <a href="#0" class="cd-close-form">Close</a> -->
+            </div>
+
+            <div id="reset-password">
+                <p class="form-message">Lost your password? Please enter your email address.</br> You will receive a link to create a new password.</p>
+
+                <form class="form">
+                    <p class="fieldset">
+                        <label class="image-replace email" for="reset-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
+                        <span class="error-message">An account with this email does not exist!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <input class="full-width has-padding" type="submit" value="Reset password">
+                    </p>
+                </form>
+
+                <p class="form-bottom-message"><a href="#0">Back to log-in</a></p>
+            </div>
+            <a href="#0" class="close-form">Close</a>
+        </div>
+    </div>
+
+    <div class="container-body">
+        <div class="displaycard">
+            <h1 class="boxh1">Straight bussin food</h1>
+            <h2 class="boxh2">anywhere on campus</h2>
+            <a href="#0" style="margin-left:5%;" class="bttn">Order Now</a>
+        </div>
+        <img class="isometric1" src="/static/img/isometric1.png" alt="isometric1" />
+    </div>
+
+    <div class="menubox">
+        <h1 class="menuh1">This weeks specials</h1>
+
+        <div class="slider">
+            <input type="radio" name="testimonial" id="t-1"/>
+            <input type="radio" name="testimonial" id="t-2"/>
+            <input type="radio" name="testimonial" id="t-3" checked/>
+            <input type="radio" name="testimonial" id="t-4"/>
+            <input type="radio" name="testimonial" id="t-5"/>
+
+            <div class="testimonials">
+                <label class="item" for="t-1">
+                    <img src="https://wallpapercave.com/wp/wp6573211.jpg" alt="picture"/>
+                    <p>Chinkfood 1</p>
+                    <a href="#0" class="bttn-two">Order</a>
+                </label>
+                <label class="item" for="t-2">
+                    <img src="https://wallpapercave.com/wp/wp3053211.jpg" alt="picture"/>
+                    <p>Chinkfood 2</p>
+                    <a href="#0" class="bttn-two">Order</a>
+                </label>
+                <label class="item" for="t-3">
+                    <img src="https://wallpapercave.com/wp/wp8593886.jpg" alt="picture"/>
+                    <p>Chinkfood 3</p>
+                    <a href="#0" class="bttn-two">Order</a>
+                </label>
+                <label class="item" for="t-4">
+                    <img src="https://wallpapercave.com/wp/wp3053215.jpg" alt="picture"/>
+                    <p>Chinkfood 4</p>
+                    <a href="#0" class="bttn-two">Order</a>
+                </label>
+                <label class="item" for="t-5">
+                    <img src="https://wallpapercave.com/wp/wp8593867.jpg" alt="picture"/>
+                    <p>Chinkfood 5</p>
+                    <a href="#0" class="bttn-two">Order</a>
+                </label>
+            </div>
+
+            <div class="dots">
+                <label for="t-1"></label>
+                <label for="t-2"></label>
+                <label for="t-3"></label>
+                <label for="t-4"></label>
+                <label for="t-5"></label>
+            </div>
+        </div>
+
+        
+    </div>
 </body>
 </html>
