improved login and added email login

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="user-modal">
+    <div class="user-modal" id="loginmodal">
         <div class="user-modal-container">
             <ul class="switcher">
                 <li><a href="#0">Sign in</a></li>
@@ -59,18 +59,22 @@
             </ul>
 
             <div id="login">
-                <form class="form">
+                <form class="form" id="signinform">
                     <p class="fieldset">
-                        <label class="image-replace email" for="signin-email">E-mail</label>
+                        <label class="image-replace email" for="signin-email" name="signin-email">E-mail</label>
                         <input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
+                        <!--
                         <span class="error-message">An account with this email address does not exist!</span>
+                        -->
                     </p>
 
                     <p class="fieldset">
                         <label class="image-replace password" for="signin-password">Password</label>
                         <input class="full-width has-padding has-border" id="signin-password" type="password"  placeholder="Password">
                         <a href="#0" class="hide-password">Show</a>
+                        <!--
                         <span class="error-message">Wrong password! Try again.</span>
+                        -->
                     </p>
 
                     <p class="fieldset">
@@ -78,8 +82,8 @@
                         <label for="remember-me">Remember me</label>
                     </p>
 
-                    <p class="fieldset">
-                        <input class="full-width" type="submit" value="Login">
+                    <p class="fieldset" id="logininbtn">
+                        <input class="full-width" type="submit" value="Login" onclick="signinEmail();">
                     </p>
 
                     <div class="signingoogle" id="signinbtn">
@@ -92,11 +96,11 @@
                 </form>
                 
                 <p class="form-bottom-message"><a href="#0">Forgot your password?</a></p>
-                <!-- <a href="#0" class="close-form">Close</a> -->
+
             </div>
 
             <div id="signup">
-                <form class="form">
+                <form class="form" id="signupform">
                     <p class="fieldset">
                         <label class="image-replace username" for="signup-username">Username</label>
                         <input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
@@ -106,7 +110,9 @@
                     <p class="fieldset">
                         <label class="image-replace email" for="signup-email">E-mail</label>
                         <input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
+                        <!--
                         <span class="error-message">Enter a valid email address!</span>
+                        -->
                     </p>
 
                     <p class="fieldset">
@@ -122,7 +128,7 @@
                     </p>
 
                     <p class="fieldset">
-                        <input class="full-width has-padding" type="submit" value="Create account">
+                        <input class="full-width has-padding" type="submit" value="Create account" onclick="signupEmail();">
                     </p>
                     <div class="signingoogle" id="signupbtn">
                         <div class="googleimgbox">
@@ -132,17 +138,18 @@
                     </div>
                 </form>
 
-                <!-- <a href="#0" class="cd-close-form">Close</a> -->
             </div>
 
             <div id="reset-password">
                 <p class="form-message">Lost your password? Please enter your email address.</br> You will receive a link to create a new password.</p>
 
-                <form class="form">
+                <form class="form" id="resetemailform">
                     <p class="fieldset">
                         <label class="image-replace email" for="reset-email">E-mail</label>
                         <input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
+                        <!--
                         <span class="error-message">An account with this email does not exist!</span>
+                        -->
                     </p>
 
                     <p class="fieldset">
@@ -258,6 +265,8 @@
                 username.innerHTML = "Not logged in";
             }
         });
+
+        
 
 
     </script>
