--- a/templates/index.html
+++ b/templates/index.html
@@ -185,27 +185,27 @@
             <div class="testimonials">
                 <label class="item" for="t-1">
                     <img src="https://wallpapercave.com/wp/wp6573211.jpg" alt="picture"/>
-                    <p>Chinkfood 1</p>
+                    <p>testfood 1</p>
                     <a href="#0" class="bttn-two">Order</a>
                 </label>
                 <label class="item" for="t-2">
                     <img src="https://wallpapercave.com/wp/wp3053211.jpg" alt="picture"/>
-                    <p>Chinkfood 2</p>
+                    <p>testfood 2</p>
                     <a href="#0" class="bttn-two">Order</a>
                 </label>
                 <label class="item" for="t-3">
                     <img src="https://wallpapercave.com/wp/wp8593886.jpg" alt="picture"/>
-                    <p>Chinkfood 3</p>
+                    <p>testfood 3</p>
                     <a href="#0" class="bttn-two">Order</a>
                 </label>
                 <label class="item" for="t-4">
                     <img src="https://wallpapercave.com/wp/wp3053215.jpg" alt="picture"/>
-                    <p>Chinkfood 4</p>
+                    <p>testfood 4</p>
                     <a href="#0" class="bttn-two">Order</a>
                 </label>
                 <label class="item" for="t-5">
                     <img src="https://wallpapercave.com/wp/wp8593867.jpg" alt="picture"/>
-                    <p>Chinkfood 5</p>
+                    <p>testfood 5</p>
                     <a href="#0" class="bttn-two">Order</a>
                 </label>
             </div>
