--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,11 @@
             <span class="ordericonnum" id="cartnum">0</span>
             <img class="bclogo" src="/static/img/BClogo.png" alt="bclogo"/>
         </div>
-        
     </div>
     
+    <div class="itemaddedpopup" id="itemaddedpopup">
+        <h2 class="itemaddedpopuptitle">Item Added</h2>
+    </div>
     <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
     <label for="openSidebarMenu" class="sidebarIconToggle">
         <div class="spinner diagonal part-1"></div>
