--- a/templates/order.html
+++ b/templates/order.html
@@ -34,8 +34,18 @@
     <div class="orderpagebox">
 
         <div class="leftbox">
-
             <div class="leftboxheader">
+                <p class="leftboxheadertext">Checkout</p>
+            </div>
+                <ul class="orderitems" id="orderitems">
+                
+                </ul>
+
+            <button class="checkouttitle" onclick="clearCart();">Clear Cart</button>
+        </div>
+
+        <div class="rightbox">
+            <div class="rightboxheader">
                 <h2 id="usernameCheckout" class="orderFor"></h2>
             </div>
 
@@ -54,18 +64,122 @@
                   <td>Test2</td>
                   <td>$15.00</td>
                 </tr>
-              </table>
-        </div>
+            </table>
 
-        <div class="rightbox">
-            <ul class="orderitems" id="orderitems">
-                
-            </ul>
-
-            <button onclick="clearCart();">Clear Cart</button>
         </div>
     </div>
 
+    <div class="user-modal" id="loginmodal">
+        <div class="user-modal-container">
+            <ul class="switcher">
+                <li><a id="tab-signin" href="#0">Sign in</a></li>
+                <li><a href="#0">New account</a></li>
+            </ul>
+
+            <div id="login">
+                <form class="form" id="signinform">
+                    <p class="fieldset">
+                        <label class="image-replace email" for="signin-email" name="signin-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
+                        <!--
+                        <span class="error-message">An account with this email address does not exist!</span>
+                        -->
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace password" for="signin-password">Password</label>
+                        <input class="full-width has-padding has-border" id="signin-password" type="password"  placeholder="Password">
+                        <a href="#0" class="hide-password">Show</a>
+                        <!--
+                        <span class="error-message">Wrong password! Try again.</span>
+                        -->
+                    </p>
+
+                    <p class="fieldset">
+                        <input type="checkbox" id="remember-me" checked>
+                        <label for="remember-me">Remember me</label>
+                    </p>
+
+                    <p class="fieldset" id="logininbtn">
+                        <input class="full-widthlol" type="submit" value="Login" onclick="signinEmail();">
+                    </p>
+
+                    <div class="signingoogle" id="signinbtn">
+                        <div class="googleimgbox">
+                            <img src="/static/img/google.png" class="googlelogo">
+                        </div>
+                        <p class="googleboxtext">Sign in with Google</p>
+                    </div>
+                        
+                </form>
+                
+                <p class="form-bottom-message"><a href="#0">Forgot your password?</a></p>
+
+            </div>
+
+            <div id="signup">
+                <form class="form" id="signupform">
+                    <p class="fieldset">
+                        <label class="image-replace username" for="signup-username">Username</label>
+                        <input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
+                        <span class="error-message">Your username can only contain numeric and alphabetic symbols!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace email" for="signup-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
+                        <!--
+                        <span class="error-message">Enter a valid email address!</span>
+                        -->
+                    </p>
+
+                    <p class="fieldset">
+                        <label class="image-replace password" for="signup-password">Password</label>
+                        <input class="full-width has-padding has-border" id="signup-password" type="password"  placeholder="Password">
+                        <a href="#0" class="hide-password">Show</a>
+                        <span class="error-message">Your password has to be at least 6 characters long!</span>
+                    </p>
+
+                    <p class="fieldset">
+                        <input type="checkbox" id="accept-terms">
+                        <label for="accept-terms">I agree to the <a class="accept-terms" href="/terms">Terms</a></label>
+                    </p>
+
+                    <p class="fieldset">
+                        <input class="full-widthlol has-padding" type="submit" value="Create account" onclick="signupEmail();">
+                    </p>
+                    <div class="signingoogle" id="signupbtn">
+                        <div class="googleimgbox">
+                            <img src="/static/img/google.png" class="googlelogo">
+                        </div>
+                        <p class="googleboxtext">Sign up with Google</p>
+                    </div>
+                </form>
+
+            </div>
+
+            <div id="reset-password">
+                <p class="form-message">Lost your password? Please enter your email address.</br> You will receive a link to create a new password.</p>
+
+                <form class="form" id="resetemailform">
+                    <p class="fieldset">
+                        <label class="image-replace email" for="reset-email">E-mail</label>
+                        <input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
+                        <!--
+                        <span class="error-message">An account with this email does not exist!</span>
+                        -->
+                    </p>
+
+                    <p class="fieldset">
+                        <input class="full-widthlol has-padding" type="submit" value="Reset password">
+                    </p>
+                </form>
+
+                <p class="form-bottom-message"><a href="#0">Back to log-in</a></p>
+            </div>
+            <a href="#0" class="close-form">Close</a>
+        </div>
+    </div>
     
 </body>
 </html>
